# ragposium

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile.server  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: deploy.yml
docker/: Dockerfile.api  Dockerfile.frontend  docker-compose-dev.yml  docker-compose-prod.yml  nginx-dev.conf  nginx-prod.conf
src/ragposium/: __init__.py
src/ragposium/api/: client.py  commands.py  datamodel.py  endpoints.py
src/ragposium/app/: __main__.py  commands.py  ingest.py
src/ragposium/cli/: __main__.py  arxiv.py  commands.py  ingest.py
src/ragposium/lib/: arxiv.py  ingest.py
src/ragposium_core/: __init__.py
