[project]
name = "ragposium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kyle Tennison", email = "kyletennison05@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "kagglehub>=0.3.8",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "pymilvus>=2.5.4",
    "ruff>=0.9.9",
    "sentence-transformers>=3.4.1",
    "typer>=0.15.1",
]

[project.scripts]
ragposium = "ragposium.cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
